@@ -2,11 +2,15 @@
 #ifndef _TEST_UTILS_H_
 #define _TEST_UTILS_H_ 1
 
-#include "irrlicht.h"
-
 #if defined(_WIN32) || defined(_WIN64) || defined(WIN32) || defined(WIN64) || defined(_WIN32_WCE)
 #define TESTING_ON_WINDOWS
+#define DIR_SEP_STRING "\\"
+#else
+#define DIR_SEP_STRING "/"
 #endif
+
+#include "irrlicht.h"
+
 
 //! Compare two files
 /** \param fileName1 The first file for comparison.
